src/snapshots/tptp__tests__fof_defined_plain_term-3.snap
---
source: src/tests.rs
expression: parsed
---
Function(
    DefinedFunctor(
        AtomicDefinedWord(
            DollarWord(
                LowerWord(
                    "f",
                ),
            ),
        ),
    ),
    Arguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ],
    ),
)
