src/snapshots/tptp__tests__fof_defined_term-3.snap
---
source: src/tests.rs
expression: parsed

---
Defined(
    Number(
        Integer(
            Integer(
                "-123",
            ),
        ),
    ),
)
