src/snapshots/tptp__tests__fof_defined_term.snap
---
source: src/tests.rs
expression: parsed
---
Atomic(
    DefinedAtomicTerm(
        DefinedPlainTerm(
            DefinedConstant(
                DefinedFunctor(
                    AtomicDefinedWord(
                        DollarWord(
                            LowerWord(
                                "defined_term",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
