src/snapshots/tptp__tests__fof_formula-3.snap
---
source: src/tests.rs
expression: parsed
---
Formula(
    Unary(
        Unary(
            UnaryConnective,
            Unary(
                Unary(
                    UnaryConnective,
                    Unitary(
                        Atomic(
                            Plain(
                                PlainAtomicFormula(
                                    Constant(
                                        Constant(
                                            Functor(
                                                Lower(
                                                    LowerWord(
                                                        "p",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
