src/snapshots/tptp__tests__fof_formula-5.snap
---
source: src/tests.rs
expression: parsed
---
FofFormula(
    Unitary(
        Parenthesised(
            Unitary(
                Atomic(
                    Plain(
                        FofPlainAtomicFormula(
                            Constant(
                                Constant(
                                    Functor(
                                        Lower(
                                            LowerWord(
                                                "p",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
