src/snapshots/tptp__tests__fof_formula.snap
---
source: src/tests.rs
expression: parsed

---
Formula(
    Unitary(
        Atomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
