src/snapshots/tptp__tests__fof_function_term-3.snap
---
source: src/tests.rs
expression: parsed

---
Defined(
    Atomic(
        DefinedAtomicTerm(
            Constant(
                DefinedConstant(
                    DefinedFunctor(
                        AtomicDefinedWord(
                            DollarWord(
                                LowerWord(
                                    "defined",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
