src/snapshots/tptp__tests__fof_function_term-5.snap
---
source: src/tests.rs
expression: parsed
---
System(
    Constant(
        SystemConstant(
            SystemFunctor(
                AtomicSystemWord(
                    DollarDollarWord(
                        LowerWord(
                            "system",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
